// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mongo Props All the props 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-c844268f",
      "namespace": "test",
    },
    "spec": Object {
      "clusterIP": "None",
      "ports": Array [
        Object {
          "port": 27107,
          "protocol": "TCP",
        },
      ],
      "selector": Object {
        "app": "my-app",
        "instance": "test",
        "role": "mongo",
      },
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": Object {
      "labels": Object {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-mongo-test-sts-c8cbd639",
      "namespace": "test",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "my-app",
          "instance": "test",
          "role": "mongo",
        },
      },
      "serviceName": "test-mongo-test-c844268f",
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "my-app",
            "instance": "test",
            "role": "mongo",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "args": Array [
                "--smallfiles",
                "--storageEngine",
                "mmapv1",
              ],
              "image": "mongo:v1",
              "name": "mongo",
              "ports": Array [
                Object {
                  "containerPort": 27017,
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "500Mi",
                },
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/data/db",
                  "name": "data",
                },
              ],
            },
          ],
          "volumes": Array [
            Object {
              "emptyDir": Object {},
              "name": "data",
            },
          ],
        },
      },
    },
  },
]
`;

exports[`Mongo Props Minimal required props 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "instance": "mongo-test",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-c844268f",
    },
    "spec": Object {
      "clusterIP": "None",
      "ports": Array [
        Object {
          "port": 27107,
          "protocol": "TCP",
        },
      ],
      "selector": Object {
        "instance": "mongo-test",
        "role": "mongo",
      },
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": Object {
      "labels": Object {
        "instance": "mongo-test",
        "release": "v1",
        "role": "mongo",
      },
      "name": "test-mongo-test-mongo-test-sts-c8cbd639",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "instance": "mongo-test",
          "role": "mongo",
        },
      },
      "serviceName": "test-mongo-test-c844268f",
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "instance": "mongo-test",
            "role": "mongo",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "args": Array [
                "--smallfiles",
                "--storageEngine",
                "mmapv1",
              ],
              "image": "mongo:v1",
              "name": "mongo",
              "ports": Array [
                Object {
                  "containerPort": 27017,
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "500Mi",
                },
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/data/db",
                  "name": "data",
                },
              ],
            },
          ],
          "volumes": Array [
            Object {
              "emptyDir": Object {},
              "name": "data",
            },
          ],
        },
      },
    },
  },
]
`;
